<resources>
    <string name="app_name">My Jobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_signup">Login/Signup</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="new_to_myjobs">New to MyJobs?</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_imp">Email Address *</string>
    <string name="signup">Signup</string>
    <string name="i_m_a">I\'m a*</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_password">Create password*</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="skills">Skills</string>
    <string name="enter_comma_separated_skills">Enter comma separated skills</string>
    <string name="have_an_account">Have an account?</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_myjobs">Welcome to MyJobs</string>
    <string name="why_us">Why Us</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_des">Enter the email associated with your account and we’ll send you instructions to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="recruiter">Recruiter</string>
    <string name="candidate">Candidate</string>
    <string name="logout">Logout</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="home">Home</string>
    <string name="jobs_for_you">Jobs for you</string>
    <string name="apply">Apply</string>
    <string name="get_more_visibility">Get More\nVisibility</string>
    <string name="Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="verify_the_abilities">Verify The\nAbilities</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="reset_pass_desc">Enter your new password below.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
</resources>