<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:elevation="0dp"
    tools:context=".modules.authentication.login.LoginFragment">


    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/appBar"
        layout="@layout/appbar_without_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="30dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                app:contentPadding="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBack">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/i_m_a"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnRecruiter"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="14dp"
                            android:layout_weight="1"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:stateListAnimator="@null"
                            android:text="@string/recruiter"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            app:iconSize="18dp"
                            android:textSize="11sp"
                            app:backgroundTint="@color/blue"
                            app:elevation="0dp"
                            app:icon="@drawable/ic_recruiter"
                            app:iconTint="@color/white"
                            app:strokeColor="@color/gray_400"
                            app:strokeWidth="0dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCandidate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:stateListAnimator="@null"
                            android:text="@string/candidate"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            app:iconSize="18dp"
                            android:textSize="11sp"
                            app:backgroundTint="@android:color/white"
                            app:elevation="0dp"
                            app:icon="@drawable/ic_candidate"
                            app:iconTint="@color/blue"
                            app:strokeColor="@color/gray_400"
                            app:strokeWidth="1dp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/full_name"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etName"
                        style="@style/TextInputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_full_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/email_address_imp"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etEmail"
                        style="@style/TextInputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_email" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/create_password"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etCreatePass"
                        style="@style/TextInputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:passwordToggleEnabled="true"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/confirm_password"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etConfirmPass"
                        style="@style/TextInputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_email"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/skills"
                        android:textSize="16sp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etSkills"
                        style="@style/TextInputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_comma_separated_skills"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        style="@style/buttonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/signup" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/have_an_account"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvLogin"
                            android:layout_marginStart="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/blue"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>